# lzma920

./: CMakeLists.txt
LibProject/: lzma920.sln
LibProject/Debug/: lzma920_debug.lib  lzma_debug_vc110.lib
LibProject/Release/: lzma920.lib  lzma_static_vc110.lib
LibProject/lzma920/: lzma920.vcxproj  lzma920.vcxproj.filters
liblzma_vc6/: liblzma.dsp  liblzma.dsw
liblzma_vc6/Debug/: liblzma_debug_vc6.lib  vc60.idb
liblzma_vc6/Release/: liblzma_release_vc6.lib  vc60.idb
